# video-stitching-poc

./: .gitignore  Makefile  README.md  event.json  player.html  pyproject.toml  requirements.txt  sam-env.sh  server.py  template-ecs.yaml  template-lambda.yaml  template.yaml
examples/: basic_stitching.py
lambda_function/: app.py  requirements.txt
output/: player.html
src/video_stitching/: config.py  fix_video_extensions.py  hls_manager.py  lambda_handler.py  local_processor.py  local_processor_ffmpeg.py  s3_service.py  simulate_s3_event.py  stitcher.py  validate_videos.py  validation.py  watermarks.py
