[project]
name = "video-stitching"
version = "0.1.0"
description = "Video stitching proof of concept"
requires-python = ">=3.8"
dependencies = [
    "opencv-python",
    "numpy",
    "m3u8",
    "boto3>=1.28.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.1.0",
    "ruff>=0.11.10",
    "python-magic>=0.4.27",
    "moviepy==1.0.3",
    "ffmpeg-python==0.2.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
]

[tool.ruff]
select = ["W292"]
fix = true
line-length = 100

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.hatch.build.targets.wheel]
packages = ["src/video_stitching"]
